examples/test/testpolicy10989.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10989
  namespace: namespace27
spec:
  podSelector:
    matchLabels:
      key46: value8
      key47: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value19
          key24: value31
          key37: value36
      podSelector:
        matchLabels:
          key15: value18
